changes for sending request for each root cause. changes for extra tags.